<android.support.constraint.ConstraintLayout
    android:id="@+id/rootView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.csf.mobile1.tp2.activity.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="368dp"
        android:layout_height="120dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/edit_text"
        android:inputType="textMultiLine"
        android:singleLine="true"
        android:textIsSelectable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEncrypt"
        android:layout_width="187dp"
        android:layout_height="53dp"
        android:background="@android:drawable/menuitem_background"
        android:drawableLeft="@android:drawable/ic_secure"
        android:paddingLeft="32dp"
        android:text="@string/button_encrypt"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:onClick="onClickButtonEncrypt"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonDecrypt"
        android:layout_width="171dp"
        android:layout_height="52dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/menuitem_background"
        android:drawableLeft="@android:drawable/ic_secure"
        android:paddingLeft="32dp"
        android:text="@string/button_decrypt"
        app:layout_constraintLeft_toRightOf="@+id/buttonEncrypt"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:onClick="onClickButtonDecrypt"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="301dp"
        android:layout_height="23dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:indeterminate="true"
        android:paddingRight="16dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEncrypt" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonSelectKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="onClickFloatingActionButtonSelectKey"
        app:fabSize="normal"
        app:layout_constraintLeft_toRightOf="@+id/ProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/buttonDecrypt"
        app:srcCompat="@drawable/ic_vpn_key_black_24dp"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_result"
        app:layout_constraintTop_toBottomOf="@+id/ProgressBar"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textViewKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="298dp"
        android:text="@string/text_view_key"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <ImageButton
        android:id="@+id/imageButtonCopy"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:background="@android:drawable/menuitem_background"
        android:onClick="onClickButtonCopy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="?android:attr/actionModeCopyDrawable"
        tools:layout_editor_absoluteX="314dp"
        tools:layout_editor_absoluteY="457dp" />


</android.support.constraint.ConstraintLayout>
